# mafiascum-scraper

./: .gitignore  Cargo.toml  README.md  build.rs  tailwind.config.js
.github/workflows/: format.yml
migrations/: 0001_initial.sql
src/: lib.rs  main.rs
src/components/: buttons.rs  header.rs  mod.rs  spinner.rs
src/components/forms/: input.rs
src/components/forms/input/: mod.rs  number_input.rs  select_menu.rs  text_input.rs
src/models/: logs.rs  mod.rs  players.rs  thread.rs  votes.rs
src/routes/: main.rs  mod.rs  not_found.rs  test.rs
src/routes/api/: mod.rs  scrape_activity_page.rs  search_or_register_thread.rs
src/routes/api/dashboard/: mod.rs  player_data.rs  player_edit.rs  setup_data.rs  vote_data.rs
src/routes/pages/: dashboard.rs  home.rs  mod.rs  scraper.rs  test.rs
src/scraping/: mod.rs  parser.rs  scraper.rs
src/static/: all.css  htmx.js
src/templates/: header.rs
src/utils/: logger.rs  mod.rs  string_similarity.rs  url.rs
tests/: string_similarity.rs
