[package]
name = "mafiascum_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
maud = "0.26.0"
mime = "0.3.17"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-async-std-native-tls", "time", "chrono"] }
tokio = "1.38.1"
chrono = { version = "0.4.23", features = ["serde"] }
url = "2.5.2"
reqwest = "0.12.5"
select = "0.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
rustfmt = "0.10.0"

